[package]
name = "rstcp"
version = "0.1.0"
authors = ["Yijun Zhao <ariesdevil77@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
chashmap = "2.2.2"
rlimit = "0.3.0"
